manifest/objects/ValorX__Access_Control__c.object
<CustomObject>
    <fields>
        <fullName>ValorX__App__c</fullName>
        <label>App</label>
        <referenceTo>ValorX__App__c</referenceTo>
        <relationshipLabel>Access Controls</relationshipLabel>
        <relationshipName>Access_Controls</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ValorX__Profile__c</fullName>
        <label>Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValorX__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>App_Access_Controls</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Access Control</label>
    <nameField>
        <displayFormat>AC-{000000}</displayFormat>
        <label>Access Control Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Access Controls</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>